# cypher-graphdb-core

./: .env.age.example  .env.example  .env.memgraph.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ENGINEERING-STANDARDS.md  README.md  Taskfile.yml  cli  mkdocs.yml  pyproject.toml  t1.py  test_age_connection.py  test_age_debug.py
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: TODO.md  documentation-guide.md  documentation_guide.md  index.md
docs/css/: material.css  mkdocstrings.css
docs/design/: duckdb-migration.md  falkordb-integration.md  fluent-cypher-query-builder.md  hierarchical-export-format.md  model-provider-isolation.md  model-provider-label-collision.md  multiple_statement_execution.md  parameterized_queries_for_typed_models.md  query-result-immutable-design.md  query_result_immutable_design.md  read_only_mode.md  stateless_multi_graph_support.md
docs/examples/: docstring_examples.py
docs/reference/cypher_graphdb/: index.md
docs/reference/cypher_graphdb/backends/: index.md
docs/reference/cypher_graphdb/cli/: index.md
docs/reference/cypher_graphdb/cypher/: index.md
docs/reference/cypher_graphdb/tools/: index.md
examples/: _data.xlsx  execute_cypher.py  execute_cypher_memgraph.py  export_to_excel.py  fastapi_server.py  graph_operations.py  import_from_excel.py  load_models_example.py  sample_model.py  test_examples.py
examples/product-graph/: fastapi_server.py  graph_model.py  graph_operations.py  import_from_excel.py  load_graph_model.py  load_models_example.py  test_examples.py  use_renderer.py
scripts/: release.sh  verify.sh
src/cypher_graphdb/: __about__.py  __init__.py  __main__.py  args.py  backend.py  backendprovider.py  cardinality.py  command_reader.py  config.py  connection_guard.py  cypherbuilder.py  cyphergraphdb.py  cypherjson.py  cypherparser.py  dbpool.py  decorators.py  display.py  exceptions.py  graphops.py  main.py  modelinfo.py  modelprovider.py  models.py  options.py  schema.py  settings.py  statistics.py  utils.py
src/cypher_graphdb/backends/: __init__.py
src/cypher_graphdb/backends/age/: __init__.py  agebulkwriter.py  agegraphdb.py  agerowfactories.py  agesearch.py  ageserializer.py  agesqlbuilder.py  agtype.py  agtype_parser.py
src/cypher_graphdb/backends/memgraph/: __init__.py  memgraphdb.py  memgraphrowfactories.py
src/cypher_graphdb/cli/: __init__.py  app.py  banner.py  command_manager.py  command_map.py  command_registry.py  completer.py  config.py  exporter.py  file_executor.py  graphdata.py  graphdb.py  help.py  importer.py  prompt.py  promptparser.py  provider.py  renderer.py  runtime.py  schema_cmd.py  settings.py
src/cypher_graphdb/cli/commands/: __init__.py  add_graph_command.py  apply_config_command.py  base_command.py  change_dbgraph_command.py  clear_graph_command.py  commit_command.py  connect_command.py  create_dbgraph_command.py  create_edge_command.py  create_graph_command.py  create_linked_node_command.py  create_node_command.py  dbgraph_exists_command.py  delete_graphobj_command.py  (+36 more)
src/cypher_graphdb/cypher/: Cypher.g4  Cypher.interp  CypherLexer.interp  CypherLexer.py  CypherListener.py  CypherParser.py
src/cypher_graphdb/cyphergraphdb/: __init__.py  batch.py  bulk_normalize.py  connection.py  criteria.py  cyphergraphdb.py  indexing.py  pagination.py  pagination_mixin.py  result.py  schema.py  search.py  sql.py  stream_mixin.py
src/cypher_graphdb/cypherquery/: __init__.py  builder.py  params.py  patterns.py
src/cypher_graphdb/schema/: __init__.py  converter.py  core.py  generator.py
src/cypher_graphdb/tools/: __init__.py  base_exporter.py  base_importer.py  csv_exporter.py  csv_importer.py  csv_source.py  data_flattener.py  duckdb_source.py  excel_exporter.py  excel_importer.py  excel_row_source.py  file_exporter.py  file_importer.py  hierarchical_exporter.py  hierarchical_importer.py  hierarchical_row_source.py  json_importer.py  json_yaml_data_source.py  row_collector.py  row_set.py  row_source.py  tabular_importer.py  yaml_importer.py
src/cypher_graphdb/utils/: __init__.py  collection_utils.py  column_utils.py  connection_utils.py  conversion_utils.py  core_utils.py  schema_merge.py  schema_to_llm.py  schema_utils.py  settings_repr.py  string_utils.py
tests/: README.md  conftest.py  test_json_schema_loading.py  test_json_schema_vs_decorators.py
tests/integration/: conftest.py  test_basic_operations.py  test_create_or_merge.py  test_cypher_query_builder.py  test_cypher_query_writes.py  test_example.py  test_indexes_and_bulk.py  test_mass_delete.py  test_pagination.py  test_parameters.py  test_query_execution_error.py  test_read_only_mode.py  test_streaming.py
tests/unit/: README.md  __init__.py  mock_backend.py  test_age_serializer.py  test_age_sqlbuilder.py  test_agtype_parser.py  test_backend_capabilities.py  test_bulk_normalize.py  test_column_utils.py  test_command_reader.py  test_connection_guard.py  test_cypherbuilder.py  test_cypherparser.py  test_cypherquery.py  test_cypherquery_facade.py  test_cypherquery_patterns.py  test_dbpool.py  test_dict_access_mixin.py  test_extend_relation_decorator.py  test_extend_relations.py  test_graph_id_zero.py  test_graphops.py  test_indexing.py  test_json_schema_loading.py  test_json_schema_vs_decorators.py  test_model_inheritance.py  test_modelinfo.py  test_modelprovider_loading.py  test_modelprovider_schemas.py  test_models.py  test_pagination.py  test_prepared_statement_recovery.py  test_query_execution_error.py  test_query_timeout.py  test_relation_inheritance.py  test_schema_converter.py  test_settings.py  test_utils.py
tests/unit/cli/: __init__.py  test_cmd_map.py  test_command_registry.py
tests/unit/tools/: test_data_flattener.py  test_exporters.py  test_hierarchical_importer.py  test_json_yaml_data_source.py  test_resource_management.py  test_tabular_import.py
tests/unit/utils/: test_collection_utils.py  test_connection_utils.py  test_conversion_utils.py  test_core_utils.py  test_schema_merge.py  test_schema_utils.py  test_settings_repr.py  test_string_utils.py
(+12 files in other folders)
