[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cypher_graphdb"
authors = [
    { name = "Wolfgang Miller", email = "wolfgang.miller@petrarca-labs.com" },
]
description = "ORM like library and CLI for cypher query language supporting graph databases."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14,<4.0"
classifiers = [
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
]
dynamic = ["version"]
dependencies = [
    "art",
    "python-dotenv",
    "prompt-toolkit",
    "rich",
    "apache-age-python",
    "openpyxl",
    "numpy",
    "pydantic",
    "pydantic-settings>=2.13.1",
    "loguru",
    "psycopg >= 3.3.3",
    "psycopg-binary >= 3.3.3",
    "pymgclient",
    "typing-extensions",
    "typer",
    "tenacity",
    "json-schema-to-pydantic>=0.4.11",
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
watch = [
    "watchfiles",
]

build = [
    "pip-tools",
    "build",
    "wheel"
]

dev = [
    "testcontainers",
    "ruff",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "setuptools-scm",
]

docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "markdown-callouts>=0.3",
    "markdown-exec>=1.7",
    "mkdocs-coverage",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "pymdown-extensions",
    "termynal",
    "black",
]

examples = [
    "fastapi",
    "uvicorn",
]

[tool.uv.sources]
apache-age-python = { git = "https://github.com/apache/age.git", tag = "PG18/v1.7.0-rc0", subdirectory = "drivers/python" }

[project.scripts]
cgdb-cli = "cypher_graphdb.args:typer_main"

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+(?:\\.\\d+)*)"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.ruff]
extend-exclude = ["src/cypher_graphdb/cypher"]
line-length = 130
unsafe-fixes = true

[tool.ruff.lint]
ignore = ["SIM108"]  # Ignore ternary operator suggestions for readability
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # McCabe cyclomatic complexity
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests (default)",
    "integration: marks tests as integration tests (all backends)",
    "integration_memgraph: marks integration tests for Memgraph backend",
    "integration_age: marks integration tests for Apache AGE backend",
]
testpaths = ["tests"]
addopts = [
    "-m unit",  # run unit tests by default
    "--strict-markers",
]

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    "*/src/cypher_graphdb/cypher/*",
    ]
